<package format="2">
  <name>caffe_yolov3</name>
  <version>1.0.0</version>
  <description>
    This package provides foo capability.
  </description>
  <maintainer email="zijie.guo@daimler.com">Zijie Guo</maintainer>
  <license>BSD</license>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>